--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body >
 
-    <div style="border: 1px solid black;width: 900px;margin-left: 20%;padding: 2%;">
+    <div style="border: 1px solid black;width: 900px;margin: auto;padding: 2%;">
 
         <!-- Form Top -->
         <div>
